--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- custom styles -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -43,17 +45,17 @@
             </div>
         </nav>
         <!-- image slider start -->
-        <section class="container">
+        <section class="container mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row p-5 bg-gradient d-flex align-items-center" style="background-color: #FCEAE8">
+                        <div class="row p-5 panda-bg-info d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world</p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -67,7 +69,7 @@
                                 <p>This is the best x-box in the world for people who just want to waste time in front
                                     of fake sports.</p>
                                 <h1>$600</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -81,7 +83,7 @@
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.</p>
                                 <h1>$1200</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -104,22 +106,22 @@
     </header>
     <main>
         <!-- catagories -->
-        <section class="container my-5">
+        <section class="container my-5 catagories">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-around rounded-3">
                         <h1 class="text-white">Watch</h1>
                         <img src="images/categories/watch.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-around rounded-3">
                         <h1 class="text-white">Bag</h1>
                         <img src="images/categories/bag.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-around rounded-3">
                         <h1 class="text-white">Shoes</h1>
                         <img src="images/categories/shoes.png" alt="">
                     </div>
@@ -140,7 +142,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -154,7 +156,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -169,7 +171,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -189,7 +191,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -203,7 +205,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -218,7 +220,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -230,14 +232,14 @@
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
-                <input type="text" placeholder="Your Email">
+                <input class="form-control" type="text" placeholder="Your Email">
                 <br>
-                <button class="btn btn-warning">SUBMIT</button>
+                <button class="btn-buy-now">SUBMIT</button>
             </div>
         </section>
     </main>
     <footer class="mt-5 text-center">
-        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+        <small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
     </footer>
 
 
